# NeXShell

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  test_ollama.sh
include/: ai_assistant.h  builtin_commands.h  command_executor.h  command_parser.h  ollama_connector.h  shell.h  utils.h
src/: ai_assistant.cpp  builtin_commands.cpp  command_executor.cpp  command_parser.cpp  main.cpp  ollama_connector.cpp  shell.cpp  utils.cpp
tests/: CMakeLists.txt  test_shell.cpp
